<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="142dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="15dp"
        android:shadowColor="#000"
        android:shadowDx="20"
        android:shadowDy="20"
        android:shadowRadius="50"
        app:cardBackgroundColor="@color/cdView"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/inputText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="0"
            android:padding="10dp"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textColorHint="@color/text_hint_cardView"
            android:textSize="34sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:background="@color/btncolor"
                android:padding="10sp"
                android:text="C"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:background="@color/btncolor"
                android:padding="10sp"
                android:text="%"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:background="@color/btncolor"
                android:padding="10sp"
                android:text="/"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:background="@color/btncolor"
                android:padding="10sp"
                app:srcCompat="@drawable/delkey3"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:background="@color/btncolor"
                android:padding="10sp"
                android:text="@string/n1"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:background="@color/btncolor"
                android:padding="10sp"
                android:text="@string/n2"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:background="@color/btncolor"
                android:padding="10sp"
                android:text="@string/n3"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:background="@color/btncolor"
                android:padding="10sp"
                android:text="x"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:background="@color/btncolor"
                android:padding="10sp"
                android:text="@string/n4"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:background="@color/btncolor"
                android:padding="10sp"
                android:text="@string/n5"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:background="@color/btncolor"
                android:padding="10sp"
                android:text="@string/n6"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:background="@color/btncolor"
                android:padding="10sp"
                android:text="-"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv13"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:background="@color/btncolor"
                android:padding="10sp"
                android:text="@string/n7"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv14"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:background="@color/btncolor"
                android:padding="10sp"
                android:text="@string/n8"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv15"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:background="@color/btncolor"
                android:padding="10sp"
                android:text="@string/n9"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv16"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:background="@color/btncolor"
                android:padding="10sp"
                android:text="+"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv17"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:background="@color/btncolor"
                android:padding="10sp"
                android:text="."
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv18"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:background="@color/btncolor"
                android:padding="10sp"
                android:text="@string/n0"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv19"
                android:layout_width="166dp"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:background="@color/btncolor"
                android:padding="16sp"
                android:text="="
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>